--- a/css/utilities.css
+++ b/css/utilities.css
@@ -6,7 +6,7 @@
 }
 
 .card {
-  background-color: #eee;
+  background-color: #ffffff;
   color: #333;
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
