--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   --secondary-color: #1c3fa8;
   --dark-color: #002240;
   --light-color: #f4f4f4;
-  
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 
 * {
@@ -29,6 +30,19 @@ a {
   text-decoration: none;
   color: #333;
 }
+
+code,
+pre {
+  background: #333;
+  color: #fff;
+  padding: 10px;
+}
+
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
+
 
 h1, h2 {
   font-weight: 300;
@@ -90,6 +104,10 @@ img {
   overflow: visible;
 }
 
+.showcase-text {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form{
   position: relative;
   top: 60px;
@@ -97,6 +115,8 @@ img {
   width: 400px;
   z-index: 100;
   justify-self: flex-end;
+  animation: slideInFromRight 1s ease-in;
+
 }
 
 .showcase-form .form-control {
@@ -134,6 +154,7 @@ img {
 /* Stats */
 .stats {
   padding-top: 100px;
+  animation: slideInFromBottom 1s ease-in;
 }
 
 .container .stats-heading {
@@ -161,6 +182,10 @@ img {
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
 } */
+
+.cli {
+  animation: slideInFromBottom 1s ease-in;
+}
 
 .cli .grid {
   grid-template-columns: 8fr 5fr;
@@ -205,7 +230,8 @@ img {
 }
 
 /* Features Page */
-.features-head img {
+.features-head img,
+.docs-head img {
   width: 200px;
   justify-self: end;
 }
@@ -230,6 +256,30 @@ img {
   grid-area: 2 / 1 / 3 / 3;
 }
 
+
+
+/* Docs */
+.docs-main h3 {
+  margin: 20px 0;
+}
+
+.docs-main .grid {
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-start;
+}
+
+.docs-main nav li {
+  font-size: 17px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+  font-weight: bold;
+}
+
+
 /* Footer */
 .footer a {
   color: #fff;
@@ -245,7 +295,11 @@ img {
   .showcase .grid,
   .stats .grid,
   .cli .grid,
-  .cloud .grid {
+  .cloud .grid,
+  .features-main .grid.container,
+  .docs-main .grid.container,
+  .features-head .grid, 
+  .features-sub-head .grid{
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -257,11 +311,78 @@ img {
   .showcase-text {
     text-align: center;
     padding-top: 70px;
+    animation: slideInFromTop 0.8s ease-out;
   }
 
   .showcase-form {
     justify-self: center;
     margin: auto;
+    animation: slideInFromBottom 0.8s ease-out;
+  }
+
+  .features-head, 
+  .features-sub-head, 
+  .docs-head {
+    text-align: center;
+  }
+
+    .features-head img, 
+  .features-sub-head img, 
+  .docs-head img {
+    justify-self: center;
+  }
+
+  .features-main .grid > *:first-child,
+  .features-main .grid > *:nth-child(2) {
+    grid-column: 1;
+  }
+}
+
+
+/* Animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+@media (max-width: 1000px){
+
+  .showcase-form{
+    width: 340px;
   }
 }
 
@@ -282,5 +403,9 @@ img {
 
   .cloud p {
     margin: 30px auto;
+  }
+
+  .card {
+    width: 300px;
   }
 }
