--- a/css/utilities.css
+++ b/css/utilities.css
@@ -75,10 +75,31 @@
   font-size: 4rem;
 }
 
-
-
 .text-center {
   text-align: center;
+}
+
+
+/* Alert */
+.alert {
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert i {
+  margin-right: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
 }
 
 .flex {
